--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "react-native-sound": "0.11.2",
     "react-native-splash-screen": "3.3.0",
     "react-native-svg": "13.13.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-video": "6.0.0-alpha.11",
     "react-native-watch-connectivity": "1.1.0",
     "react-native-webrtc": "118.0.2",
-    "react-native-webview": "13.5.1",
+    "react-native-webview": "13.10.5",
     "text-encoding": "0.7.0"
   },
   "devDependencies": {
