ios setup for Jitsi

--- a/ios/indephysio/Info.plist
+++ b/ios/indephysio/Info.plist
@@ -22,6 +22,16 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+    <key>NSCameraUsageDescription</key> 
+	<string>We need access to your camera for video conferencing</string> 
+	<key>NSMicrophoneUsageDescription</key> 
+	<string>We need access to your microphone for audio conferencing</string>
+	<key>RTCScreenSharingExtension</key> 
+	<string>your.broadcast.extension.bundle.identifier</string> 
+	<key>UIBackgroundModes</key> 
+	<array> 
+    	<string>voip</string> 
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
