--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "@react-native-community/slider": "4.4.3",
     "@react-native-google-signin/google-signin": "10.1.0",
     "@react-native/metro-config": "0.72.9",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.2",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-background-timer": "2.4.1",
+    "react-native-big-calendar": "^4.14.0",
     "react-native-calendar-events": "2.2.0",
     "react-native-default-preference": "1.4.4",
     "react-native-device-info": "10.9.0",
@@ -35,16 +41,20 @@
     "react-native-get-random-values": "1.9.0",
     "react-native-immersive-mode": "2.0.1",
     "react-native-keep-awake": "4.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv-storage": "0.10.2",
     "react-native-orientation-locker": "1.6.0",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "5.10.3",
     "react-native-performance": "5.0.0",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "4.10.8",
     "react-native-screens": "3.33.0",
     "react-native-sound": "0.11.2",
     "react-native-splash-screen": "3.3.0",
     "react-native-svg": "13.13.0",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-video": "6.0.0-alpha.11",
     "react-native-watch-connectivity": "1.1.0",
     "react-native-webrtc": "118.0.2",
