--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,8 +13,16 @@
  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION" />
 
+<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+   
     <application
       android:name=".MainApplication"
+    
+    
+       android:resizeableActivity="true"
+    android:supportsPictureInPicture="true"
+
+
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
