--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-immersive-mode": "2.0.1",
     "react-native-keep-awake": "4.0.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-loader-kit": "^2.0.8",
     "react-native-mmkv-storage": "0.10.2",
     "react-native-orientation-locker": "1.6.0",
     "react-native-pager-view": "6.2.0",
@@ -85,5 +86,6 @@
   "packageManager": "yarn@3.6.4",
   "overrides": {
     "@xmldom/xmldom": "0.8.7"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
