--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
  <uses-permission android:name="android.permission.BLUETOOTH" />
  <uses-permission android:name="android.permission.CAMERA" />
@@ -12,17 +11,11 @@
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION" />
-
 <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-   
     <application
       android:name=".MainApplication"
-    
-    
-       android:resizeableActivity="true"
-    android:supportsPictureInPicture="true"
-
-
+      android:resizeableActivity="true"
+      android:supportsPictureInPicture="true"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
@@ -31,6 +24,7 @@
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
+        android:theme="@style/SplashTheme"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
