--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "5.10.3",
     "react-native-performance": "5.0.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "4.10.8",
     "react-native-screens": "3.33.0",
