--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-background-timer": "2.4.1",
     "react-native-big-calendar": "^4.14.0",
     "react-native-calendar-events": "2.2.0",
+    "react-native-clipboard": "^0.0.5",
     "react-native-default-preference": "1.4.4",
     "react-native-device-info": "10.9.0",
     "react-native-gesture-handler": "2.17.0",
@@ -52,6 +53,7 @@
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "4.10.8",
     "react-native-screens": "3.33.0",
+    "react-native-share": "^11.0.1",
     "react-native-sound": "0.11.2",
     "react-native-splash-screen": "3.3.0",
     "react-native-svg": "13.13.0",
