--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "6.0.0-alpha.11",
+    "react-native-view-shot": "^3.8.0",
     "react-native-watch-connectivity": "1.1.0",
     "react-native-webrtc": "118.0.2",
     "react-native-webview": "13.10.5",
