--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,12 @@ local.properties
 *.keystore
 !debug.keystore
 
+# Ignore APKs
+android/app/build/outputs/apk/*.apk
+android/app/build/outputs/bundle/**/*.aab
+android/app/release/*.apk
+android/app/debug/*.apk
+
 # node.js
 #
 node_modules/
@@ -42,11 +48,6 @@ yarn-error.log
 
 # fastlane
 #
-# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
-# screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/
-
 **/fastlane/report.xml
 **/fastlane/Preview.html
 **/fastlane/screenshots
