fix the issues of pre report of play store

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ android/app/build/outputs/apk/*.apk
 android/app/build/outputs/bundle/**/*.aab
 android/app/release/*.apk
 android/app/debug/*.apk
+android/app/build/outputs
 
 # node.js
 #
