--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,13 +74,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.inde.physio"
+    namespace "com.indephysio"
     defaultConfig {
-        applicationId "com.inde.physio"
+        applicationId "com.indephysio"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "3.0"
     }
     signingConfigs {
         debug {
