--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-native-device-info": "10.9.0",
     "react-native-gesture-handler": "2.17.0",
     "react-native-get-random-values": "1.9.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-immersive-mode": "2.0.1",
     "react-native-keep-awake": "4.0.0",
     "react-native-linear-gradient": "^2.8.3",
