--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-native-async-storage/async-storage": "1.19.4",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/netinfo": "11.1.0",
-    "@react-native-community/slider": "4.4.3",
+    "@react-native-community/slider": "^4.5.3",
     "@react-native-community/voice": "^1.1.9",
     "@react-native-google-signin/google-signin": "10.1.0",
     "@react-native/metro-config": "0.72.9",
