--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-big-calendar": "^4.14.0",
     "react-native-calendar-events": "2.2.0",
     "react-native-clipboard": "^0.0.5",
+    "react-native-date-picker": "^5.0.7",
     "react-native-default-preference": "1.4.4",
     "react-native-device-info": "10.9.0",
     "react-native-gesture-handler": "2.17.0",
@@ -60,6 +61,7 @@
     "react-native-splash-screen": "3.3.0",
     "react-native-svg": "13.13.0",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-ui-datepicker": "^2.0.4",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "6.0.0-alpha.11",
     "react-native-view-shot": "^3.8.0",
