code push with new features and release new aab file with version 6

--- a/ios/indephysio/Info.plist
+++ b/ios/indephysio/Info.plist
@@ -79,5 +79,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCalendarsUsageDescription</key>
+	<string>This app requires access to your calendar to [explain why your app needs it].</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires access to your photo library to [explain why your app needs it].</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This app requires access to speech recognition to [explain why your app needs it].</string>
+
 </dict>
 </plist>
