--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-splash-screen": "3.3.0",
     "react-native-svg": "13.13.0",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-tts": "^4.1.1",
     "react-native-ui-datepicker": "^2.0.4",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "6.0.0-alpha.11",
