--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-date-picker": "^5.0.7",
     "react-native-default-preference": "1.4.4",
     "react-native-device-info": "10.9.0",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "2.17.0",
     "react-native-get-random-values": "1.9.0",
     "react-native-image-picker": "^7.1.2",
