--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@braintree/sanitize-url": "7.0.0",
     "@giphy/react-native-sdk": "3.2.6",
     "@jitsi/react-native-sdk": "2.0.2",
+    "@openspacelabs/react-native-zoomable-view": "^2.1.6",
     "@react-native-async-storage/async-storage": "1.19.4",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/netinfo": "11.1.0",
