--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@braintree/sanitize-url": "7.0.0",
     "@giphy/react-native-sdk": "3.2.6",
     "@jitsi/react-native-sdk": "2.0.2",
+    "@notifee/react-native": "^9.1.2",
     "@openspacelabs/react-native-zoomable-view": "^2.1.6",
     "@react-native-async-storage/async-storage": "1.19.4",
     "@react-native-community/clipboard": "1.5.1",
@@ -54,7 +55,6 @@
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "5.10.3",
     "react-native-performance": "5.0.0",
-    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "4.10.8",
     "react-native-screens": "3.33.0",
