--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@sentry/react-native": "^6.1.0",
     "axios": "^1.7.2",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
