--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+apply plugin: "com.google.gms.google-services" 
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -80,8 +81,8 @@ android {
         applicationId "com.inde.physio"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 100 // major.minor.patch
-        versionName "1.0.0" // major.minor.patch
+        versionCode 101 // major.minor.patch
+        versionName "1.0.1" // major.minor.patch
     }
     signingConfigs {
         debug {
@@ -116,6 +117,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation platform('com.google.firebase:firebase-bom:32.7.4') 
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
