--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,8 +81,8 @@ android {
         applicationId "com.inde.physio"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 101 // major.minor.patch
-        versionName "1.0.1" // major.minor.patch
+        versionCode 104// major.minor.patch
+        versionName "1.0.4" // major.minor.patch
     }
     signingConfigs {
         debug {
@@ -118,6 +118,10 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation platform('com.google.firebase:firebase-bom:32.7.4') 
+    implementation("com.google.android.play:app-update-ktx:2.1.0")
+    implementation ('com.google.android.material:material:1.9.0')
+    implementation("com.google.android.play:app-update:2.1.0")
+
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
