--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@notifee/react-native": "^9.1.2",
     "@openspacelabs/react-native-zoomable-view": "^2.1.6",
     "@react-native-async-storage/async-storage": "1.19.4",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/netinfo": "11.1.0",
     "@react-native-community/slider": "^4.5.3",
