--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@amplitude/react-native": "2.7.0",
     "@braintree/sanitize-url": "7.0.0",
     "@giphy/react-native-sdk": "3.2.6",
+    "@gorhom/bottom-sheet": "^5.1.2",
     "@jitsi/react-native-sdk": "2.0.2",
     "@notifee/react-native": "^9.1.2",
     "@openspacelabs/react-native-zoomable-view": "^2.1.6",
@@ -34,7 +35,11 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@sentry/react-native": "^6.1.0",
+    "@shopify/flash-list": "^1.7.3",
     "axios": "^1.7.2",
+    "lottie-react-native": "^7.2.2",
+    "mixpanel-react-native": "^3.0.8",
+    "nativewind": "^2.0.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
@@ -77,6 +82,7 @@
     "react-native-webrtc": "118.0.2",
     "react-native-webview": "13.10.5",
     "sp-react-native-in-app-updates": "^1.4.0",
+    "tailwindcss": "3.3.2",
     "text-encoding": "0.7.0"
   },
   "devDependencies": {
